accessibility contrast fix for two buttons

--- a/cas-server-webapp/src/main/resources/static/sass/components/_variables.scss
+++ b/cas-server-webapp/src/main/resources/static/sass/components/_variables.scss
@@ -27,10 +27,11 @@ $gray-light:             lighten($gray-base, 46.7%) !default; // #777
 $gray-lighter:           lighten($gray-base, 93.5%) !default; // #eee
 
 $brand-primary:         darken(#428bca, 6.5%) !default; // #337ab7
-$brand-success:         #5cb85c !default;
+$brand-success:         #2d872d !default;
 $brand-info:            #5bc0de !default;
 $brand-warning:         #f0ad4e !default;
-$brand-danger:          #d9534f !default;
+$brand-danger:          #c74b47 !default;
+
 
 
 //== Scaffolding
